2007-07-09  Lars Poeschel  <larsi@wh2.tu-dresden.de>

    * src/platform.S:
    * src/plf_misc.c:
    * src/plf_stub.c:
    * src/ser.c:
    * misc/redboot_RAM.ecm:
    * misc/redboot_ROM.ecm:
    * include/pkgconf/mlt_fr30_skmb91302_ram.h:
    * include/pkgconf/mlt_fr30_skmb91302_ram.ldi:
    * include/pkgconf/mlt_fr30_skmb91302_rom.h:
    * include/pkgconf/mlt_fr30_skmb91302_rom.ldi:
    * include/platform.inc:
    * include/plf_cache.h:
    * include/plf_intr.h:
    * include/plf_io.h:
    * include/plf_stub.h:
    * cdl/hal_fr30_skmb91302.cdl: Initial fr30 ecos port

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2007 eCosCentric
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public
// License. However the source code for this file must still be made available